<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/mainPad"
    android:gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="30dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/welcome_animation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test1"
        android:textSize="@dimen/test1TxtSize"
        android:layout_marginBottom="@dimen/test1MargB"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterName"
        android:textSize="@dimen/EnterNameTxtSize"
        android:layout_marginBottom="@dimen/EnterNameMargB"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartTest"
        android:textSize="@dimen/StartTestTxtSize"/>

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="История результатов"
        android:textSize="@dimen/StartTestTxtSize"
        android:layout_marginTop="20dp"/>

</LinearLayout>